<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_frame_layout"
    tools:context=".ui.main_activity.MainActivity">



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_recycler_view"
        style="@style/AmirMainDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/empty_linear_layout"
        style="@style/AmirMainDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/image_height"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_empty_list"
            android:src="@drawable/ic_empty_list" />

        <TextView
            style="@style/AmirNameTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:text="@string/empty_list" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_background"
        android:layout_gravity="top"
        android:padding="@dimen/margin"
        android:hint="@string/search"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:fontFamily="@font/ibm_plex_sans_arabic_regular"
            android:imeOptions="actionSearch"
            android:inputType="textAutoComplete"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_store_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/cd_add_item"
        android:src="@drawable/ic_add_business" />


</FrameLayout>