<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit_activity.EditActivity">

    <LinearLayout
        android:id="@+id/edit_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_image_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/select_or_take_photo"
            android:textColor="@color/primary_color"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/item_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/cd_item_image"
            android:src="@drawable/ic_pic_place_holder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_margin"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_photo_material_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_photo"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/card_corner_radius"
                app:icon="@drawable/ic_add_photo"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/margin"
                app:iconTint="@color/primary_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/take_photo_material_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/take_photo"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/card_corner_radius"
                app:icon="@drawable/ic_take_photo"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/margin"
                app:iconTint="@color/primary_color" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_textinputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/half_margin"
            android:hint="@string/store_name_hint"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:drawablePadding="@dimen/text_drawable_padding"
                android:imeOptions="actionSend"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                app:drawableStartCompat="@drawable/ic_store" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/area_textinputlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:layout_weight="1"
                android:hint="@string/store_area_hint"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/area_textinput_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:drawablePadding="@dimen/text_drawable_padding"
                    android:imeOptions="actionSend"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    app:drawableStartCompat="@drawable/ic_location" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_textinputlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_weight="1"
                android:hint="@string/store_city_hint"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_textinput_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:drawablePadding="@dimen/text_drawable_padding"
                    android:imeOptions="actionSend"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    app:drawableStartCompat="@drawable/ic_location" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_textinputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/half_margin"
            android:hint="@string/store_phone_hint"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_textinput_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:drawablePadding="@dimen/text_drawable_padding"
                android:imeOptions="actionSend"
                android:inputType="phone"
                android:maxLines="1"
                app:drawableStartCompat="@drawable/ic_contact" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_update_item_material_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/add_item"
                android:textAllCaps="false"
                app:backgroundTint="@color/accent_color"
                app:cornerRadius="@dimen/card_corner_radius" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_material_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/primary_color"
                app:cornerRadius="@dimen/card_corner_radius" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_material_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/accent_color"
            app:cornerRadius="@dimen/card_corner_radius"
            app:rippleColor="@color/accent_color" />


    </LinearLayout>
</ScrollView>