<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:minHeight="@dimen/min_height"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/cd_item_image"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/item_name_text_view"
            style="@style/AmirNameTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="start|center_vertical"
            app:drawableStartCompat="@drawable/ic_store"
            tools:text="Al Amir" />

        <TextView
            android:id="@+id/item_phone_text_view"
            style="@style/AmirOtherTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            app:drawableStartCompat="@drawable/ic_contact"
            tools:text="+20123456789" />

        <TextView
            android:id="@+id/item_address_text_view"
            style="@style/AmirOtherTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_location"
            tools:text="Gesr Al Suez" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/control_min_height"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/controls_rectangle"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/edit_image_button"
                style="@style/AmirImageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cd_edit"
                android:src="@drawable/ic_edit" />

            <View
                android:layout_width="@dimen/separator_width"
                android:layout_height="match_parent"
                android:background="@color/separator_color" />

            <ImageButton
                android:id="@+id/navigate_image_button"
                style="@style/AmirImageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cd_navigate"
                android:src="@drawable/ic_navigate" />

            <View
                android:layout_width="@dimen/separator_width"
                android:layout_height="match_parent"
                android:background="@color/separator_color" />

            <ImageButton
                android:id="@+id/call_image_button"
                style="@style/AmirImageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cd_call"
                android:src="@drawable/ic_call" />

        </LinearLayout>


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>